[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/OpenDyslexic-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/character/DeadPlayer.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[node name="DeadPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_top = 56.0
margin_right = 1280.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 1 )
text = "You died!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
margin_left = 376.0
margin_top = 224.0
margin_right = 900.0
margin_bottom = 340.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Reset level"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="Button" parent="."]
margin_left = 384.0
margin_top = 536.0
margin_right = 896.0
margin_bottom = 652.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Character"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="."]
margin_left = 400.0
margin_top = 328.0
margin_right = 881.0
margin_bottom = 444.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Main Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="."]
margin_left = 448.0
margin_top = 432.0
margin_right = 832.0
margin_bottom = 548.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Controls"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Character" to="." method="_on_character_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
